<resources>
    <string name="app_name">Digital Image Processing</string>
    <string name="action_settings">Settings</string>
    <string name="header">Digital image processing with OpenCV</string>
    <string name="select_option">select option</string>
    <string name="title_activity_processing_options">Processing options</string>
    <string name="histogram">histogram</string>
    <string name="detect_edges">detect edges</string>
    <string name="detect_light">detect light</string>
    <string name="choose_option">Choose option</string>
    <string name="title_activity_histogram">HistogramActivity</string>
    <string name="title_activity_detect_edges">DetectEdgesActivity</string>
    <string name="title_activity_detect_light">DetectLightActivity</string>
    <string name="request_permission_rationale" type="id">We need read image from your gallery.</string>
    <string name="ok">ok</string>
    <string name="sample_image">Sample image</string>
</resources>
