<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.zaven.digitalimageprocessing.activities.ProcessingOptionsActivity"
    tools:showIn="@layout/activity_processing_options">

    <TextView
        android:id="@+id/info"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/header_text_size"
        android:text="@string/choose_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/histogram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/histogram" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/edges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detect_edges" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detect_light" />

    </LinearLayout>


</RelativeLayout>
