<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.DipActivity"
    tools:showIn="@layout/activity_dip">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_vertical_margin"
            android:gravity="center"
            android:text="@string/header"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/sample_image"
                tools:src="@drawable/outdoors"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:padding="4dp"
                android:gravity="center"
                android:text="@string/sample_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/select_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_option" />

    </LinearLayout>

</RelativeLayout>
